# Cache-Coherence-Monitoring-System

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  make.ps1  pyproject.toml
api/: config.py  main.py  models.py
api/routers/: ask.py  dashboard.py  events.py  registry.py
api/services/: __init__.py  auto_tagger.py  dynamodb.py  llm.py  rag.py
dashboard/: index.html  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: AlertFeed.jsx  AskBar.jsx  KeyDetailPanel.jsx  ServiceComparisonChart.jsx  StalenessTable.jsx
infra/: localstack.tfvars  main.tf  provider.tf  variables.tf
lambdas/: staleness_alerter.py
prompts/: alert_summary.txt  anomaly_explain.txt  auto_tag.txt  nl_query.txt
rag/: runbook_ingestor.py
runbooks/: cache-stampede.md  high-write-latency.md  invalidation-handler-timeout.md  redis-connection-pool-exhausted.md  ttl-misconfiguration.md
scripts/: aws_setup.py  init_pgvector.sql  seed_redis_keys.py  seed_registry.py  setup_localstack.py  smoke_test_live.py
tests/integration/: test_event_cycle.py
tests/unit/: test_llm_and_prompts.py  test_staleness_calculation.py
workers/: staleness_checker.py
