[tool.poetry]
name = "cache-staleness-monitor"
version = "0.1.0"
description = "Production-grade Redis cache staleness monitoring with RAG + LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api" }, { include = "workers" }, { include = "rag" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
redis = "^5.0.4"
boto3 = "^1.34.0"
anthropic = "^0.28.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
sqlalchemy = "^2.0.30"
sentence-transformers = "^3.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
tenacity = "^8.3.0"
slack-sdk = "^3.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.7"
mypy = "^1.10.0"
moto = { version = "^5.0.0", extras = ["dynamodb", "s3", "secretsmanager"] }
fakeredis = "^2.23.0"
factory-boy = "^3.3.0"

[tool.poetry.group.lambda.dependencies]
# Minimal deps for Lambda packaging
boto3 = "^1.34.0"
anthropic = "^0.28.0"
slack-sdk = "^3.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=api --cov=workers --cov-report=term-missing"
